--- a/inc/linux/Makefile.def
+++ b/inc/linux/Makefile.def
@@ -81,11 +81,13 @@ $(error Cannot find kernel version. Check $(KERNELDIR)/include/linux/version.h.)
 endif
 
 
+ifneq ($(KERNEL_VER), 3.8)
 ifneq ($(KERNEL_VER), 3.5)
 ifneq ($(KERNEL_VER), 3.2)
 ifneq ($(KERNEL_VER), 2.6)
 ifneq ($(KERNEL_VER), 2.4)
 $(error Only kernel 2.4/2.6/3.2/3.5 is supported but you use $(KERNEL_VER))
+endif
 endif
 endif
 endif
